--- a/package.json
+++ b/package.json
@@ -1,5 +1,32 @@
 {
   "name": "apollo-ethereum",
   "version": "0.1.0",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "dev": "tsc -w",
+    "build": "tsc",
+    "style": "prettier --write src/**/*.ts"
+  },
+  "bin": "./lib/cli",
+  "dependencies": {
+    "graphql": "^14.5.8",
+    "mkdirp": "^0.5.1"
+  },
+  "devDependencies": {
+    "husky": "^3.0.9",
+    "lint-staged": "^9.4.2",
+    "prettier": "^1.19.1",
+    "typescript": "^3.7.2"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "src/**/*.ts": [
+      "prettier --write",
+      "git add"
+    ]
+  }
 }
