--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -11,4 +11,6 @@ settings:
     node:
       extensions: ['.ts']
 rules:
+  radix: off
+  no-underscore-dangle: off
   import/prefer-default-export: off
