--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "apollo-ethereum",
   "version": "0.0.2",
   "license": "MIT",
-  "bin": "./lib/cli",
-  "main": "./lib/link",
-  "types": "./lib/link/index.d.ts",
+  "bin": "bin/apollo-ethereum",
+  "main": "lib/link",
+  "types": "lib/link/index.d.ts",
   "scripts": {
     "dev": "tsc -w",
     "build": "tsc",
@@ -15,7 +15,9 @@
   },
   "dependencies": {
     "apollo-link": "^1.2.13",
-    "mkdirp": "^0.5.1"
+    "mkdirp": "^0.5.1",
+    "web3": "^2.0.0-alpha.1",
+    "web3-utils": "^1.2.4"
   },
   "devDependencies": {
     "@types/mkdirp": "^0.5.2",
