--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,9 +5,7 @@
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true,
-    "isolatedModules": true,
-    "strict": true,
-    "declaration": true
+    "strict": true
   },
   "include": [
     "src"
