--- a/package.json
+++ b/package.json
@@ -9,15 +9,14 @@
     "dev": "tsc -w",
     "build": "tsc",
     "clean": "rm -rf lib",
-    "style": "prettier --write src/**/*.ts",
-    "style:check": "prettier --check src/**/*.ts",
-    "lint": "eslint src/**/*.ts"
+    "style": "prettier --write 'src/**/*.ts'",
+    "style:check": "prettier --check 'src/**/*.ts'",
+    "lint": "eslint 'src/**/*.ts'"
   },
   "dependencies": {
     "apollo-link": "^1.2.13",
     "mkdirp": "^0.5.1",
-    "web3": "^2.0.0-alpha.1",
-    "web3-utils": "^1.2.4"
+    "web3": "^2.0.0-alpha.1"
   },
   "devDependencies": {
     "@types/mkdirp": "^0.5.2",
@@ -43,6 +42,7 @@
   },
   "lint-staged": {
     "src/**/*.ts": [
+      "eslint",
       "prettier --write",
       "git add"
     ]
