support event querying

--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -14,4 +14,5 @@ rules:
   radix: off
   no-underscore-dangle: off
   import/prefer-default-export: off
+  "@typescript-eslint/no-unused-vars": error
   "@typescript-eslint/ban-ts-ignore": warn
