--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "apollo-link": "^1.2.13",
+    "js-yaml": "^3.13.1",
     "mkdirp": "^0.5.1",
     "web3": "^2.0.0-alpha.1"
   },
