--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "style:check": "prettier --check '{src,test}/**/*.js'",
     "lint": "eslint src test",
     "test": "truffle test",
-    "test:update": "CHAI_JEST_SNAPSHOT_UPDATE_ALL=true truffle test"
+    "test:update": "CHAI_JEST_SNAPSHOT_UPDATE_ALL=true truffle test",
+    "contracts": "truffle build",
+    "start": "truffle develop"
   },
   "dependencies": {
     "apollo-link": "^1.2.13",
