--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "apollo-ethereum",
   "version": "0.1.0",
   "license": "MIT",
+  "repository": "eco/apollo-ethereum",
   "bin": "bin/apollo-ethereum",
   "main": "lib/link",
   "scripts": {
